--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for fetching data from MongoDb",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "start": "nodemon index.js"
   },
   "author": "Isaac Agbobli",
   "license": "ISC",
