--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-     "start": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "Isaac Agbobli",
   "license": "ISC",
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
-    "multa": "^1.0.0"
+    "multa": "^1.0.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
